fixed alignment for individual portfolio peices so it is more aligned

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -763,6 +763,9 @@ a{
 	 	display: -webkit-flex; 
 		align-items:center;
 		align-content:center;
+		max-width: 1000px;
+		margin-left: auto;
+		margin-right: auto;
 
 	}
 
@@ -967,4 +970,8 @@ iframe{
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
+}
+
+img{
+	max-height: 500px;
 }
